--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
                 Mark City Tigers as Favorite
             </button>
         </article>
+         <article class="card">
+            <h3>Featured Team</h3>
+            <p><strong>City Buildings </strong> – A slow-paced, attacking team known for their second-half comebacks.</p>
+            <button class="favorite-btn" data-team="City Tigers">
+                Mark City Tigers as Favorite
+            </button>
+        </article>
 
         <article class="card">
             <h3>Quick Links</h3>
