--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             </button>
         </article>
          <article class="card">
-            <h3>Featured Team</h3>
+            <h3>Featur Team</h3>
             <p><strong>City Buildings </strong> – A slow-paced, attacking team known for their second-half comebacks.</p>
-            <button class="favorite-btn" data-team="City Tigers">
+            <button class="favorite-btn" data-team="City Tig">
                 Mark City Tigers as Favorite
             </button>
         </article>
